force-app/main/default/objects/Assign_Interviewer__c/Assign_Interviewer__c.object-meta.xml
<CustomObject>
    <label>Assign Interviewer</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Assign Interviewer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assign Interviewer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>