force-app/main/default/objects/Assign_Interviewer__c/fields/Interviewer_01__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_01__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 01</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assign_Interviewer</relationshipName>
    <type>Lookup</type>
</CustomField>