force-app/main/default/objects/Assign_Interviewer__c/fields/Interviewer_02__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_02__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 02</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assign_Interviewer1</relationshipName>
    <type>Lookup</type>
</CustomField>