force-app/main/default/objects/Assign_Interviewer__c/fields/Interviewer_03__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_03__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 03</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assign_Interviewer2</relationshipName>
    <type>Lookup</type>
</CustomField>